# Platinum-Eyes

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  functions.cpp  main.cpp  main.py  ocrserver.py  platinumEyes.h  trim.cpp  vcpkg.json  vcpkg_rf.txt  warframe_tool.cpp  warframe_tool.h
.github/: readme.md
.github/workflows/: cmake-multi-platform.yaml  cmake-multi-platformCompile.yaml
config/: config.h  configUtilities.cpp
gui/: gui.h  guiUtilities.cpp  settingsChanged.h  settingsChanges.cpp
keybindings/: keybindings.h
modules/config/: config.h  configUtilities.cpp
modules/gui/: gui.h  guiUtilities.cpp  settingsChanges.cpp  settingsMenu.cpp
modules/keybindings/: keyBindings.cpp  keybindings.h
modules/ocr/: easyocr.cpp  ocr.h  ocrfunctions.cpp  readingItems.cpp  tesseract.cpp
modules/relics/: relicDatabase.cpp  relics.h
modules/utilities/: functions.cpp  utilities.h
ocr/: easyocr.cpp  ocr.h  ocrfunctions.cpp  readingItems.cpp  tesseract.cpp
relics/: relicDatabase.cpp  relics.h
src/: core.h  main.cpp
src/clipboard/: clipboard.cpp  clipboard.hpp
src/clipboard/native/: clipboardnative.cpp  clipboardnative.hpp
src/config/: config.h  configUtilities.cpp  toolconfig.cpp  toolconfig.hpp
src/config/native/: nativeconfig.cpp  nativeconfig.hpp
src/core/: core.cpp  core.h
src/core/appstate/: appstate.hpp
src/core/datalayer/: datalayer.hpp
src/core/native/: nativecore.cpp  nativecore.hpp  nativeheaders.hpp
src/eeLog/: eelog.cpp  eelog.hpp
src/eefilewatcher/: eefilewatcher.cpp  eefilewatcher.hpp
src/eelogwatcher/: eelogwatcher.cpp  eelogwatcher.hpp
src/eelogwatcher/updatelistener/: updatelistener.cpp  updatelistener.hpp
src/gui/: drawData.cpp  gui.h  guiUtilities.cpp  mainWindow.cpp  settingsChanges.cpp  settingsMenu.cpp  settingsWindow.cpp
src/gui/graphiclayer/: graphiclayer.hpp
src/gui/native/: guinative.cpp  guinative.hpp
src/items/item/: item.hpp
src/items/itemcache/: itemcache.cpp  itemcache.hpp
src/items/itemdetails/: itemdetails.hpp
src/keybindings/: keyBindings.cpp  keybindings.h
src/keybindings/keybind/: keybind.hpp
src/keybindings/native/: keybindingsnative.cpp  keybindingsnative.hpp
src/native/: native.cpp  native.hpp
src/ocr/: ocr.h  ocrfunctions.cpp  readingItems.cpp  tesseract.cpp
src/ocr/native/: nativeocr.cpp  nativeocr.hpp
src/ocr/ocrlayer/: ocrlayer.hpp
src/ocr/point/: point.hpp
src/relics/: relicDatabase.cpp  relics.h
src/relics/relicinfo/: relicinfo.cpp  relicinfo.hpp
src/system/systemlayer/: systemlayer.hpp
src/utilities/: functions.cpp  utilities.cpp  utilities.h
src/utilities/timer/: timer.cpp  timer.hpp
src/utilities/trim/: trim.cpp  trim.hpp
src/wfmd/: wfmd.cpp  wfmd.hpp
utilities/: configNames.h  configUtilities.cpp  easyocr.cpp  functions.cpp  guiUtilities.cpp  keyBindings.cpp  readingItems.cpp  settingsChanged.h  settingsChanges.cpp  settingsMenu.cpp  tesseract.cpp  utilities.h
